# primeleaf

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  conftest.py  prime-leaf-tree-theory.tex  pyproject.toml
.github/workflows/: ci.yml
data/: density_curve.txt  zeros_t500.txt  zeros_t5000.txt
paper/: prime-leaf-tree-theory.tex
paper/notes/: recap-v0.1.md  v1-math-first.tex
primeleaf/: __init__.py  __main__.py  degeneracy.py  primes.py  zeros.py  zeta.py
scripts/: make_figures.py
tests/: test_degeneracy.py  test_primes.py  test_zeros.py  test_zeta.py
verification/: analytic.py  verify_combinatorics.py  zero_census.py
