[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "primeleaf"
version = "0.1.4"
description = "Computational companion to 'Prime-Leaf Tree Theory: arithmetic as the statistical mechanics of multiplication histories'"
readme = "README.md"
authors = [{ name = "Giuseppe Barbalinardo" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = [
    "mpmath>=1.3",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
figures = ["matplotlib>=3.7"]

[project.urls]
Homepage = "https://github.com/gbarbalinardo/primeleaf"
Repository = "https://github.com/gbarbalinardo/primeleaf"

[project.scripts]
primeleaf = "primeleaf.__main__:main"

[tool.setuptools]
packages = ["primeleaf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: long-running computations (the full zero census); run with -m slow",
]
